--- a/app/views/category_mailer/publication.html.erb
+++ b/app/views/category_mailer/publication.html.erb
@@ -4,9 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Bienvenido, <%= @user.name %></h1>
-	<h2> 	La persona del correo  <%= @user1.email %>  quiere realizar  una  publicacion en  tu pagina </h2>
-	<h2> debes realizar  login como administrador, revisar el contenido y si lo consideras  bien</h2>   
-	<h1>darle  una  prioridad del 0 al 10 y  cambiarle el status a activa </h1>  
+    <h1>Bienvenido, Administrador</h1>
+	<p>El administrador de la aplicación 'Opción Venezuela' ha aprobado tu publicación con el titulo <%= @titulo %>. Puedes entrar en nuestra pagina web y verificar que tu publicacion este activa. Alguna duda o sugerencia, por favor escribenos a traves de opcionvenezuelaorg@gmail.com </p>  
   </body>
 </html>
