--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,4 +1,3 @@
-
 body{
   background-color:orange;
 }
@@ -23,14 +22,17 @@ tr:nth-child(even) {
   border:5px solid orange ;
   margin: 25px;
   border-radius:5px;
+  width: 70%;
+  height: 70%;
 }
 .button-admin {
   width:8%;
 }
 
 .navbar-custom {
-  background-color:orange;
+  background-color:#33C1F2;
   border-radius:5px;
+  height: auto;
 }
 
 .carousel-top {
@@ -43,12 +45,16 @@ tr:nth-child(even) {
   border-radius:10%;
 }
 .carousel-custom .item img {
-  // opacity:0.7;
-  height:300px;
+  height:10%;
   width:50%;
   margin: auto;
 }
 
+.carousel-custom .item img {
+  height:300px;
+  width:50%;
+  margin: auto;
+}
 .pretty-input::-webkit-file-upload-button {
         display: none;
     }
@@ -57,7 +63,6 @@ tr:nth-child(even) {
        color: #fff;
        width: auto;
        height: auto;
-       line-height: 45px;
        text-align: center;
        text-transform: uppercase;
        display: inline-block;
@@ -83,6 +88,7 @@ tr:nth-child(even) {
 
 .container-agr {
     position: relative;
+    height: 280px;
 }
 .image {
   opacity: 1;
