--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,166 +11,177 @@
 
 <body>
 
-<nav class="navbar navbar-custom navbar-fixed-top ">
-  <div class="container-fluid ">
-    <div class="row">
-      <div>
-        <%= image_tag "opcionv.jpg", size:"50x50", class: "img-opcion col-xs-1" %>
-          <% if !user_signed_in?  %>
-            <%= link_to 'Iniciar sesion', new_user_session_path, class: 'btn btn-info '  %>
-            <%= link_to 'Registrarse', new_user_registration_path, class: 'btn btn-info ' %>
-            <%= link_to 'Publicar', new_user_registration_path, class: 'btn btn-info ' %>
-          <% else %>
-
-              <% if current_user.email == 'opcionvenezuelaorg@gmail.com'   %>
+<header>
+  
+<div class="container-fluid ">
+      <div class="col-xs-12">
+      <nav class="navbar navbar-custom navbar-fixed-top ">
+        <div>
+          <div class="col-xs-2">
+            <%= image_tag "op.png", class: "img-logo" %>
+          </div>
+            <div class="col-xs-offset-5 col-xs-3 col-sm-offset-5 col-sm-5 col-md-offset-6 col-md-4">
+            <% if current_user.email == 'opcionvenezuelaorg@gmail.com'   %>
                 <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info ' %>
                 <%= link_to 'Publicar', new_category_path, class: 'btn btn-success ' %>
                 <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
 
               <% else %>
                 <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info ' %>
-                <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger' %>
                 <%= link_to 'Publicar', new_category_path, class: 'btn btn-success' %>
+                <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger' %>
             <% end %>  
-          <% end %>  
-      <!-- fin del if  -->
-      </div>
-    </div>
+            </div>
+        <!-- fin del if  -->
+        </div>
+  </nav>
   </div>
-</nav>
+</div>
+</header>
 <br/>
 <br/>
 <br/>
-<% if current_user.email == 'opcionvenezuelaorg@gmail.com' %>
+<br/>
+<br/>
+<br/>
+
+<div class="container-fluid">
   <div class="col-xs-12">
-    <table class="table">
-      <thead>
-        <tr>
-          <th style="text-align: center"><h4 style="color:blue">Titulo</h4> </th>
-          <th style="text-align: center"> <h4 style="color:blue">Usuario</h4> </th>
-          <th style="text-align: center"><h4 style="color:blue">1er Imagen</h4> </th>
-          <th style="text-align: center">
-            <a href=/categories?key=Prioridad-Up>
-            <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
-            <h4 style="color:blue">Prioridad</h4>
-            <a href=/categories?key=Prioridad-Down>
-            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
-          </th>
-          
-          <th style="text-align: center">
-            <a href=/categories?key=Tipo-Up>
-            <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
-            <h4 style="color:blue">Tipo de evento</h4>
-            <a href=/categories?key=Tipo-Down>
-            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
-          </th>
+    <% if current_user.email == 'opcionvenezuelaorg@gmail.com' %>
+      <table class="table">
+        <thead>
+          <tr>
+            <th style="text-align: center"><h4 style="color:blue">Titulo</h4> </th>
+            <th style="text-align: center"> <h4 style="color:blue">Usuario</h4> </th>
+            <th style="text-align: center"><h4 style="color:blue">1er Imagen</h4> </th>
+            <th style="text-align: center">
+              <a href=/categories?key=Prioridad-Up>
+                <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span>
+              </a>
+              <h4 style="color:blue">Prioridad</h4>
+              <a href=/categories?key=Prioridad-Down>
+                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+              </a>
+            </th>
+            
+            <th style="text-align: center">
+              <a href=/categories?key=Tipo-Up>
+                <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span>
+              </a>
+              <h4 style="color:blue">Tipo de evento</h4>
+              <a href=/categories?key=Tipo-Down>
+                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+              </a>
+            </th>
 
-          <th style="text-align: center">
-            <a href=/categories?key=FechadeInicio-Up>
-            <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
-            <h4 style="color:blue">Fecha de inicio</h4>
-            <a href=/categories?key=FechadeInicio-Down>
-            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
-          </th>
-          <th style="text-align: center">
-            <a href=/categories?key=Status-Up>
-            <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
-            <h4 style="color:blue">Status</h4>
-            <a href=/categories?key=Status-Down>
-            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-      <% @categories.each do |category| %>
-        <tr>
+            <th style="text-align: center">
+              <a href=/categories?key=FechadeInicio-Up>
+                <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span>
+              </a>
+              <h4 style="color:blue">Fecha de inicio</h4>
+              <a href=/categories?key=FechadeInicio-Down>
+                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+              </a>
+            </th>
+            <th style="text-align: center">
+              <a href=/categories?key=Status-Up>
+                <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span>
+              </a>
+              <h4 style="color:blue">Status</h4>
+              <a href=/categories?key=Status-Down>
+                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+              </a>
+            </th>
+          </tr>
+        </thead>
 
-          <td class="text-center">
-            <%= category.title %>
-          </td>
-           <td class="text-center">
-            <%= category.user.name %>
-          </td>         
-          <td class="text-center">
-          <% if category.avatar1.url != "/images/" %>
-            <%= image_tag(category.avatar1(:thumb)) %>
-          <% else %>
-            <%= image_tag("sin_imagen.jpg", size:"100x100") %>
-  
-          <% end %>  
-          </td>
-          <td class="text-center">
-            <%= category.priority %>
-          </td>
-          <td class="text-center">
-            <%= category.category_type %>
-          </td>
-          <td class="text-center">
-            <%= category.start_date %>
-          </td>
-          <td class="text-center">
-            <% if category.status == true %>
-              <p>Activa</p>
-            <% else %>
-              <p>Inactiva</p>  
-            <% end %>  
-          </td>
+        <tbody>
+        <% @categories.each do |category| %>
+          <tr>
 
-          <td class="text-right">
-            <%= link_to '', category_path(category), class: 'btn btn-info glyphicon glyphicon-eye-open' %>
-            <%= link_to '', edit_category_path(category), class: 'btn btn-warning glyphicon glyphicon-pencil' %>
-            <%= link_to '', category_path(category), method: :delete, data: {confirm: '¿Está seguro?'}, class: 'btn btn-danger glyphicon glyphicon-remove' %>
-          </td>
-        </tr>
-      <% end %>
-
-
-<% else %>
-
-  <div class="col-xs-12">
-    <table class="table">
-      <thead>
-        <tr>
-          <th class="text-center">Titulo</th>
-          <th class="text-center">Categoría</th>
-          <th class="text-center">Localidad</th>          
-          <th class="text-center">Fecha de inicio</th>
-          <th class="text-center">Dias que dura el evento</th>
-          <th class="text-center">Elige</th>
-
-        </tr>
-      </thead>
-      <tbody></tbody>
-      <% @categories.each do |category| %>
-        <tr>
-          <td class="text-center">
-            <%= category.title %>
-          </td>
-          <td class="text-center">
-            <%= category.category_type %>
-          </td>
-          <td class="text-center">
-            <%= category.location %>
-          </td>
-          <td class="text-center">
-            <%= category.start_date %>
-          </td>
-          <td class="text-center">
-              <%= category.duration %>          
+            <td class="text-center">
+              <%= category.title %>
             </td>
-          <td class="text-center">
-            <%= link_to '', category_path(category), class: 'btn btn-info glyphicon glyphicon-eye-open' %>
-            <%= link_to '', edit_category_path(category), class: 'btn btn-warning glyphicon glyphicon-pencil' %>
-            <%= link_to '', category_path(category), method: :delete, data: {confirm: '¿Está seguro?'}, class: 'btn btn-danger glyphicon glyphicon-remove' %>
-          </td>
-        </tr>
-      <% end %>
-  </div>
-    </table>
-  </div>
-        
+             <td class="text-center">
+              <%= category.user.name %>
+            </td>         
+            <td class="text-center">
+            <% if category.avatar1.url != "/images/" %>
+              <%= image_tag(category.avatar1(:thumb)) %>
+            <% else %>
+              <%= image_tag("sin_imagen.jpg", size:"100x100") %>
+    
+            <% end %>  
+            </td>
+            <td class="text-center">
+              <%= category.priority %>
+            </td>
+            <td class="text-center">
+              <%= category.category_type %>
+            </td>
+            <td class="text-center">
+              <%= category.start_date %>
+            </td>
+            <td class="text-center">
+              <% if category.status == true %>
+                <p>Activa</p>
+              <% else %>
+                <p>Inactiva</p>  
+              <% end %>  
+            </td>
 
-<% end %>
+            <td class="text-right">
+              <%= link_to '', category_path(category), class: 'btn btn-info glyphicon glyphicon-eye-open' %>
+              <%= link_to '', edit_category_path(category), class: 'btn btn-warning glyphicon glyphicon-pencil' %>
+              <%= link_to '', category_path(category), method: :delete, data: {confirm: '¿Está seguro?'}, class: 'btn btn-danger glyphicon glyphicon-remove' %>
+            </td>
+          </tr>
+        <% end %>
+
+
+  <% else %>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th class="text-center">Titulo</th>
+            <th class="text-center">Categoría</th>
+            <th class="text-center">Localidad</th>          
+            <th class="text-center">Fecha de inicio</th>
+            <th class="text-center">Dias que dura el evento</th>
+            <th class="text-center">Elige</th>
+          </tr>
+        </thead>
+        
+        <% @categories.each do |category| %>
+          <tr>
+            <td class="text-center">
+              <%= category.title %>
+            </td>
+            <td class="text-center">
+              <%= category.category_type %>
+            </td>
+            <td class="text-center">
+              <%= category.location %>
+            </td>
+            <td class="text-center">
+              <%= category.start_date %>
+            </td>
+            <td class="text-center">
+                <%= category.duration %>          
+              </td>
+            <td class="text-center">
+              <%= link_to '', category_path(category), class: 'btn btn-info glyphicon glyphicon-eye-open' %>
+              <%= link_to '', edit_category_path(category), class: 'btn btn-warning glyphicon glyphicon-pencil' %>
+              <%= link_to '', category_path(category), method: :delete, data: {confirm: '¿Está seguro?'}, class: 'btn btn-danger glyphicon glyphicon-remove' %>
+            </td>
+          </tr>
+        <% end %>
+      </table>        
+  <% end %>
+
+  </div>
+</div>
 
 </body>
 
