--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -7,77 +7,135 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="assets/stylesheets/welcome.scss">
   <link rel="stylesheet" href="assets/stylesheets/application.scss">
+	<%= csrf_meta_tags %>
 </head>
 <body>
-		<%= render 'form', category: @category %>
-  <header class="container-fluid">
-			<nav class="navbar navbar-custom navbar-fixed-top ">
-			  <div class="container-fluid ">
-			    <div class="row">
-			      <div>
-			        <%= image_tag "opcionv.jpg", size:"50x50", class: "img-opcion col-xs-1" %>
-			      		<%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info' %>
-			          <%= link_to 'Nueva publicacion', new_category_path, class: 'btn btn-success' %>
+		<div class="container-fluid ">
+      <div class="col-xs-12">
+      <nav class="navbar navbar-custom navbar-fixed-top ">
+        <div>
+          <div class="col-xs-2">
+            <%= image_tag "op.png", class: "img-logo" %>
+          </div>
+            <div class="col-xs-offset-5 col-xs-3 col-sm-offset-5 col-sm-5 col-md-offset-6 col-md-4">
+             <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info' %>
 			      		<%= link_to 'Publicaciones', categories_path, {:style => 'text-decoration: none', class: 'btn btn-primary'} %>
 			      		<%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger' %>
-			      </div>
+            </div>
+        <!-- fin del if  -->
+        </div>
+  </nav>
+  </div>
+</div>
+</header>
+<br/>
+<br/>
+<br/>
+<br/>
+	
+<div class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				<% if @category.errors.any? %>
+			    <div >
+			      <h2><%= pluralize(@category.errors.count, "error") %> Se necesitan los campos marcados en rojo para completar la publicacion</h2>
+
+			      <ul>
+			      <% @category.errors.full_messages.each do |msg| %>
+			        <li><%= msg %></li>
+			      <% end %>
+			      </ul>
 			    </div>
-			  </div>
-			</nav>
-  </header>
-<br/>
-<br/>
+			  <% end %>
+				
+			</div>
+		</div>
+	</div>	
+
 <div class="container ">
 	<div class="row">
-		<h2 class="text-center">Agrega tu publicacion</h2>
-			<%= form_for  :category, :url => {:action => :create} do |f| %>
-		<div class="form-group text-center">
-				<%= f.select :category_type, ['Evento', 'Foro', 'Curso', 'Taller', 'Documental', 'Otro']%>
-				<label for="" style = "text-indent:20px">Titulo:&nbsp;&nbsp;</label> <%= text_field(:category, :title, maxlength: 85, size:30, style: 'text-indent:20px')%>
-				<label for="" style = "text-indent:20px">Lugar:&nbsp;&nbsp;</label><%= text_field(:category, :location, :maxlength => 80, :size => 40, style: 'text-indent') %>
-		</div>		
-		<div class="form-group text-center">
-				<label for="">Descripcion:</label><br/><%= text_area(:category, :description, size: "24x20", maxlength: 50000, class: "form-control") %>
-		</div>
-		<div class="form-group text-center">
-			
-				<label for="" style = "text-indent:20px">Fecha de inicio:&nbsp;&nbsp;</label><%= date_field(:category, :start_date) %>
-				<label for="" style = "text-indent:20px">Dias que dura el evento:&nbsp;&nbsp;</label><%= number_field(:category, :duration) %>
-				<label for="" style = "text-indent:20px">Hora de inicio:&nbsp;&nbsp;</label><%= time_field(:category, :start_hour) %>
-				<label for="" style = "text-indent:20px">Hora de finalizacion:&nbsp;&nbsp;</label><%= time_field(:category, :end_hour) %>
-		</div>
-		<div class="form-group text-center">
-			<label for="">Sitio web:&nbsp;&nbsp;</label><%= url_field(:category, :web_site)%>
 
-			<label for="" style = "text-indent:20px">Teléfono:&nbsp;&nbsp;</label><%= number_field(:category, :phone, maxlength:16, size:16) %>
-			<label for="" style = "text-indent:20px">Precio de la entrada:&nbsp;&nbsp;</label><%= number_field(:category, :cost) %>
-		</div>
-		<% if current_user.email == 'opcionvenezuelaorg@gmail.com' %>
-    	<div class="form-group text-center">
-	    	<label for="" >Prioridad:</label>
-					<%= f.number_field :priority %>
-					
-					<%= f.label 'Publicación:', style: 'text-indent: 20px' %>
-					<%= f.label 'activa' %>
-					<%= f.radio_button :status, true %>
-					<%= f.label 'inactiva' %>
-					<%= f.radio_button :status, false %>
-				</div>	
-		<% end %>
-		<div class="form-group text-center">
-				<label for="" style = "text-indent:20px">
-					<%= f.file_field :avatar1, class: "pretty-input" %>
-				</label>
-				<label for="" style = "text-indent:20px">
-				<%= f.file_field :avatar2, class: "pretty-input" %>
-				</label>
-				<label for="" style = "text-indent:20px">
-				<%= f.file_field :avatar3, class: "pretty-input" %>
-				</label>
-		</div>
+			<div class="col-xs-12">
+				<h2 class="text-center">Agrega tu publicacion</h2>
+			<br/>		
+			</div>
+			  	<%= form_for  :category, :url => {:action => :create} do |f| %>
+			  	<div class="row text-center">
+						<div class="col-xs-1 col-xs-offset-1">
+							<%= f.select :category_type, ['Evento', 'Foro', 'Curso', 'Taller', 'Documental', 'Otro']%>
+						</div>
+						<div class="col-xs-4 col-xs-offset-1">
+							<label >Titulo:&nbsp;&nbsp;</label> <%= text_field(:category, :title, size:28)%>
+						</div>
+						<div class="col-xs-4 col-xs-offset-1">
+							<label >Lugar:&nbsp;&nbsp;</label> <%= text_field(:category, :location, size:28)%>
+						</div>
+			  	</div>
+						<br/>		
+					<div class="row text-center">
+              <div class="col-xs-3">
+                <label>Fecha de inicio:&nbsp;&nbsp;</label><%= date_field(:category, :start_date) %>
+              </div>
+              <div class="col-xs-3">
+                <label>Dias:&nbsp;&nbsp;</label><%= number_field(:category, :duration, min:0, max:999) %>
+              </div>
+              <div class="col-xs-3">
+              <label>H. inicio:&nbsp;&nbsp;</label><%= time_field(:category, :start_hour) %>
+              </div>
+              <div class="col-xs-3">
+              <label>H. fin:&nbsp;&nbsp;</label><%= time_field(:category, :end_hour) %>
+              </div>
+					</div>
+						<br/>
+					<div class="row text-center">
+              <div class="col-xs-4">
+                <label>Sitio web:&nbsp;&nbsp;</label><%= url_field(:category, :web_site)%>
+              </div>
+              <div class="col-xs-4">
+                <label style = "text-indent:20px">Teléfono:&nbsp;&nbsp;</label><%= number_field(:category, :phone, maxlength:16, size:16) %>
+              </div>
+              <div class="col-xs-4">
+              <label style = "text-indent:20px">Precio de la entrada:&nbsp;&nbsp;</label><%= number_field(:category, :cost) %>
+              </div>              
+					</div>
+						<br/>
+					<div class="row text-center">
+						<% if current_user.email == 'opcionvenezuelaorg@gmail.com' %>
+			        <div class="col-xs-offset-3 col-xs-3">
+			          <label >Prioridad:</label>
+			            <%= f.number_field :priority %>
+			        </div>    
+			        <div class="col-xs-3">            
+			            <%= f.label 'Publicación:', style: 'text-indent: 20px' %>
+			            <%= f.label 'activa' %>
+			            <%= f.radio_button :status, true %>
+			            <%= f.label 'inactiva' %>
+			            <%= f.radio_button :status, false %>
+			        </div>    
+			    	<% end %>
+					</div>
+						<br/>
+					<div class="col-xs-12">
+		        <label>Descripcion:</label><br/><%= text_area(:category, :description, size: "24x7", maxlength: 50000, class: "form-control") %>
+						<br/>
+		      </div>		
+					<div class="row text-center">
+				      <label style = "text-indent:20px">
+				        <%= f.file_field :avatar1, class: "pretty-input" %>
+				      </label>
+				      <label style = "text-indent:20px">
+				      <%= f.file_field :avatar2, class: "pretty-input" %>
+				      </label>
+				      <label style = "text-indent:20px">
+				      <%= f.file_field :avatar3, class: "pretty-input" %>
+				      </label>
+					</div>	
+				<div class="col-xs-12">
+					<%= f.submit 'Guardar', class: "btn btn-primary" %>
+				</div>
+				<% end %>
 
-				<%= f.submit 'Guardar', class: "btn btn-primary" %>
-			<% end %>
+
 	</div>
 </div>
 </body>
