--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,5 +1,5 @@
 body{
-  background-color:orange;
+  background-color:gainsboro;
 }
 
 table {
@@ -78,10 +78,13 @@ tr:nth-child(even) {
 }
      }
 
+.carousel-indicators {
+  top:78%;
+}
 
 
 .carousel-control .icon-prev, .carousel-control .icon-next {
-    font-size: 100px; 
+    font-size: 100px;
     margin-top: -50px;
     color: #fff;
 }
