--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -32,7 +32,7 @@
 <br/>
 <br/>
 <br/>
-	
+
 <div class="container">
 		<div class="row">
 			<div class="col-xs-12">
@@ -47,17 +47,17 @@
 			      </ul>
 			    </div>
 			  <% end %>
-				
+
 			</div>
 		</div>
-	</div>	
+	</div>
 
 <div class="container ">
 	<div class="row">
 
 			<div class="col-xs-12">
 				<h2 class="text-center">Edita tu publicacion</h2>
-			<br/>		
+			<br/>
 			</div>
 			  	<%= form_for  :category, :url => {:action => :update} do |f| %>
 			  	<div class="row text-center">
@@ -71,7 +71,7 @@
 							<label >Lugar:&nbsp;&nbsp;</label> <%= text_field(:category, :location, size:28)%>
 						</div>
 			  	</div>
-						<br/>		
+						<br/>
 					<div class="row text-center">
               <div class="col-xs-3">
                 <label>Fecha de inicio:&nbsp;&nbsp;</label><%= date_field(:category, :start_date) %>
@@ -96,7 +96,7 @@
               </div>
               <div class="col-xs-4">
               <label style = "text-indent:20px">Precio de la entrada:&nbsp;&nbsp;</label><%= number_field(:category, :cost) %>
-              </div>              
+              </div>
 					</div>
 						<br/>
 					<div class="row ">
@@ -104,29 +104,29 @@
 			        <div class="col-xs-offset-3 col-xs-3">
 			          <label >Prioridad:</label>
 			            <%= f.number_field :priority %>
-			        </div>    
-			        <div class="col-xs-3">            
+			        </div>
+			        <div class="col-xs-3">
 			            <%= f.label 'Publicación:', style: 'text-indent: 20px' %>
 			            <%= f.label 'activa' %>
 			            <%= f.radio_button :status, true %>
 			            <%= f.label 'inactiva' %>
 			            <%= f.radio_button :status, false %>
-			        </div>    
+			        </div>
 			    	<% end %>
 					</div>
 						<br/>
 					<div class="col-xs-12">
 		        <label>Descripcion:</label><br/><%= text_area(:category, :description, size: "24x7", maxlength: 50000, class: "form-control") %>
 						<br/>
-		      </div>		
+		      </div>
       <div class="row">
       	<div class="col-xs-4">
 		      <label>
 		        <% if @category.avatar1.url != "/images/" %>
 		          <%= image_tag(@category.avatar1.url, class: "img-edit") %>
 		        <% else %>
-		          <%= image_tag("sin_imagen.jpg", class: "img-edit") %>        
-		        <% end %> 
+		          <%= image_tag("sin_foto.jpg", class: "img-edit") %>        
+		        <% end %>
 		      </label>
       	</div>
       	<div class="col-xs-4">
@@ -134,8 +134,8 @@
 		        <% if @category.avatar2.url != "/images/" %>
 		          <%= image_tag(@category.avatar2.url, class: "img-edit") %>
 		        <% else %>
-		          <%= image_tag("sin_imagen.jpg", class: "img-edit") %>        
-		        <% end %> 
+		          <%= image_tag("sin_foto.jpg", class: "img-edit") %>        
+		        <% end %>
 		      </label>
       	</div>
       	<div class="col-xs-4">
@@ -143,8 +143,8 @@
 		        <% if @category.avatar3.url != "/images/" %>
 		          <%= image_tag(@category.avatar3.url, class: "img-edit") %>
 		        <% else %>
-		          <%= image_tag("sin_imagen.jpg", class: "img-edit") %>        
-		        <% end %> 
+		          <%= image_tag("sin_foto.jpg", class: "img-edit") %>        
+		        <% end %>
 		      </label>
       	</div>
       </div>
@@ -166,7 +166,7 @@
 				      </label>
 						</div>
 					</div>
-					
+
 				<div class="col-xs-12">
 					<%= f.submit 'Guardar', class: "btn btn-primary" %>
 				</div>
