--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -19,9 +19,9 @@
             <%= image_tag "op.png", class: "img-logo" %>
           </div>
             <div class="col-xs-offset-5 col-xs-3 col-sm-offset-5 col-sm-5 col-md-offset-6 col-md-4">
-              <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info ' %>
+              <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-primary ' %>
               <%= link_to 'Publicar', new_category_path, class: 'btn btn-success ' %>
-              <%= link_to 'Publicaciones', categories_path,  class: 'btn btn-primary' %>
+              <%= link_to 'Publicaciones', categories_path,  class: 'btn btn-warning' %>
               <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
             </div>
         <!-- fin del if  -->
