Arreglando la ortografia

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -20,7 +20,7 @@
             <div class="col-xs-offset-5 col-xs-3 col-sm-offset-5 col-sm-5 col-md-offset-6 col-md-4">
              <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-primary' %>
 			      		<%= link_to 'Publicaciones', categories_path, class: 'btn btn-warning' %>
-			      		<%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger' %>
+			      		<%= link_to 'Cerrar Sesóon', destroy_user_session_path, method: 'delete', class: 'btn btn-danger' %>
             </div>
         <!-- fin del if  -->
         </div>
