--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -56,7 +56,7 @@
 	<div class="row">
 
 			<div class="col-xs-12">
-				<h2 class="text-center">Agrega tu publicacion</h2>
+				<h2 class="text-center">Agrega tu publicación</h2>
 			<br/>		
 			</div>
 			  	<%= form_for  :category, :url => {:action => :create} do |f| %>
@@ -65,7 +65,7 @@
 							<%= f.select :category_type, ['Evento', 'Foro', 'Curso', 'Taller', 'Documental', 'Otro']%>
 						</div>
 						<div class="col-xs-4 col-xs-offset-1">
-							<label >Titulo:&nbsp;&nbsp;</label> <%= text_field(:category, :title, size:28)%>
+							<label >Título:&nbsp;&nbsp;</label> <%= text_field(:category, :title, size:28)%>
 						</div>
 						<div class="col-xs-4 col-xs-offset-1">
 							<label >Lugar:&nbsp;&nbsp;</label> <%= text_field(:category, :location, size:28)%>
@@ -77,7 +77,7 @@
                 <label>Fecha de inicio:&nbsp;&nbsp;</label><%= date_field(:category, :start_date) %>
               </div>
               <div class="col-xs-3">
-                <label>Dias:&nbsp;&nbsp;</label><%= number_field(:category, :duration, min:0, max:999) %>
+                <label>Días:&nbsp;&nbsp;</label><%= number_field(:category, :duration, min:0, max:999) %>
               </div>
               <div class="col-xs-3">
               <label>H. inicio:&nbsp;&nbsp;</label><%= time_field(:category, :start_hour) %>
@@ -116,7 +116,7 @@
 					</div>
 						<br/>
 					<div class="col-xs-12">
-		        <label>Descripcion:</label><br/><%= text_area(:category, :description, size: "24x7", maxlength: 50000, class: "form-control") %>
+		        <label>Descripción:</label><br/><%= text_area(:category, :description, size: "24x7", maxlength: 50000, class: "form-control") %>
 						<br/>
 		      </div>		
 					<div class="row text-center">
