--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,18 +31,18 @@
             <div class="col-xs-offset-4 col-xs-3 col-sm-offset-5 col-sm-5 col-md-offset-6 col-md-4">
             <% if !user_signed_in?  %>
 
-              <%= link_to 'Iniciar sesion', new_user_session_path, class: 'btn btn-success '  %>
+              <%= link_to 'Iniciar sesión', new_user_session_path, class: 'btn btn-success '  %>
               <%= link_to 'Registrarse', new_user_registration_path, class: 'btn btn-success ' %>
               <%= link_to 'Publicar', new_user_registration_path, class: 'btn btn-success ' %>
             <% else %>
               <% if current_user.email == 'opcionvenezuelaorg@gmail.com'   %>
                 <a href=/categories class="btn btn-primary">Hola administrador</a>
                 <%= link_to 'Publicar', new_category_path, class: 'btn btn-success ' %>
-                <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
+                <%= link_to 'Cerrar Sesión', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
               <% else %>
-                <a href=/categories class="btn btn-primary">Hi, <%= current_user.name %></a>
+                <a href=/categories class="btn btn-primary">Hola <%= current_user.name %></a>
                 <%= link_to 'Publicar', new_category_path, class: 'btn btn-success' %>
-                <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
+                <%= link_to 'Cerrar Sesión', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
               <% end %>
             <% end %>
             </div>
@@ -324,8 +324,8 @@
               <% end %>
             <% end %>
           </div><!-- cierre de carousel-inner -->
-        <a rel="nofollow" rel="noreferrer"class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-        <a rel="nofollow" rel="noreferrer"class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        <a rel="nofollow" rel="noreferrer" class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+        <a rel="nofollow" rel="noreferrer" class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
         </div><!-- cierre de carousel -->
       </div><!-- cierre de col -->
     </div><!-- cierre de row -->
