--- a/app/views/category_mailer/publication.html.erb
+++ b/app/views/category_mailer/publication.html.erb
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Bienvenido administrador</h1>
-	<p>El administrador de la aplicación 'Opción Venezuela' ha aprobado tu publicación con el titulo <%= @titulo %>. Puedes entrar en nuestra pagina web y verificar que tu publicacion este activa. Alguna duda o sugerencia, por favor escribenos a traves de opcionvenezuelaorg@gmail.com </p>  
+	<p> La persona del correo <%= @user1.email %> quiere realizar  una  publicación con el título <%= @titulo %> en tu aplicación 'Opción Venezuela'.</p>
+	<p> Inicia sesión como 'administrador', revisa el contenido y si lo consideras  apropiado, dale  una prioridad del 1 al 10 y cambiale el status a 'activa' </p>  
   </body>
 </html>
